kubernetes/cluster/active/resources/envoy-resources/base/resources/gateway-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      sectionName: http-apex
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      sectionName: http-wildcard
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 302
      matches:
        - path:
            type: PathPrefix
            value: /
